--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Frontend Mentor | Product preview card component</title>
     <style>
       .attribution {
+        margin-top: 5rem;
         font-size: 11px;
         text-align: center;
         padding-inline: 2rem;
