--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <picture class="product-card__image">
           <source
             srcset="./images/image-product-desktop.jpg"
-            media="(min-width: 720px)" />
+            media="(min-width: 45rem)" />
           <img src="./images/image-product-mobile.jpg" alt="" />
         </picture>
         <div class="product-card__content">
@@ -53,7 +53,7 @@
               <span class="visually-hidden">Price before discount</span>$169.99
             </div>
           </div>
-          <button class="button">
+          <button class="button" type="button">
             <img src="./images/icon-cart.svg" alt="" />Add to Cart
           </button>
         </div>
